# 2024-ic-hackerhouse-advanced

./: dfx.json  package.json
src/icp_hello_world_rust_backend/: Cargo.toml  icp_hello_world_rust_backend.did
src/icp_hello_world_rust_backend/src/: lib.rs  tokenizer.rs
src/icp_hello_world_rust_frontend/: components.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/icp_hello_world_rust_frontend/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  export-detail.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  trace
src/icp_hello_world_rust_frontend/.next/cache/: .tsbuildinfo  config.json
src/icp_hello_world_rust_frontend/.next/server/: middleware-build-manifest.js  middleware-react-loadable-manifest.js  server-reference-manifest.json
src/icp_hello_world_rust_frontend/.next/server/app/: _not-found.html  _not-found.rsc  index.html  index.rsc  page.js  page_client-reference-manifest.js
src/icp_hello_world_rust_frontend/.next/server/chunks/: 112.js
src/icp_hello_world_rust_frontend/.next/server/pages/: 404.html  500.html
src/icp_hello_world_rust_frontend/.next/static/chunks/: 212-dcd3f6db18f1f684.js  (+3 more)
src/icp_hello_world_rust_frontend/app/: page.tsx
src/icp_hello_world_rust_frontend/declarations/icp_gpt2/: icp_gpt2.did.d.ts  index.d.ts  index.js
src/icp_hello_world_rust_frontend/declarations/icp_hello_world_rust_backend/: icp_hello_world_rust_backend.did.d.ts  icp_hello_world_rust_backend.did.js  index.js
(+12 files in other folders)
