[package]
name = "icp_hello_world_rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.3"
ic-cdk = "0.12.0"
icp_gpt2 = { path = "../icp_gpt2" }  # Add direct dependency to GPT2 project

[dev-dependencies]
pocket-ic = "4.0.0"
